Updated git ignore to include new venv path and updated create stocks table action to use the new requirements.txt file

--- a/.github/workflows/create_stocks_table.yaml
+++ b/.github/workflows/create_stocks_table.yaml
@@ -30,7 +30,7 @@ jobs:
       id: cache
       with:
         path: .venv
-        key: venv-${{ runner.os }}-py312-${{ hashFiles('Scripts/requirements.txt') }}
+        key: venv-${{ runner.os }}-py312-${{ hashFiles('requirements.txt') }}
         restore-keys: |
           venv-${{ runner.os }}-py312-
 
