--- a/.github/workflows/sync_stocks_table.yaml
+++ b/.github/workflows/sync_stocks_table.yaml
@@ -50,9 +50,9 @@ jobs:
         python -m pip install --upgrade pip
         pip install --no-cache-dir -r requirements.txt
 
-    - name: Process tickers and update database
+    - name: Synchronize stocks database with deterministic approach
       env:
         DATABASE_URL: ${{ secrets.DATABASE_URL }}
       run: |
         source .venv/bin/activate
-        python github_action_scripts/stocks_table/create_stocks_table.py nyse_tickers.txt nasdaq_tickers.txt
+        python github_action_scripts/stocks_table/sync_stocks_table.py nyse_tickers.txt nasdaq_tickers.txt
