--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-yahooquery>=2.4.1
+git+https://github.com/JNewman-cell/yahooquery.git@master
 pandas>=2.3.3
 psycopg2-binary>=2.9.11
 python-dotenv>=1.1.1
