--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,5 @@ git+https://github.com/JNewman-cell/yahooquery.git@master
 pandas>=2.3.3
 psycopg2-binary>=2.9.11
 python-dotenv>=1.1.1
+requests>=2.31.0
 requests-futures>=1.0.2
