--- a/.github/workflows/sync_cik_lookup_table.yaml
+++ b/.github/workflows/sync_cik_lookup_table.yaml
@@ -14,6 +14,11 @@ jobs:
       cancel-in-progress: true
 
     steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 1  # Shallow clone for faster checkout
+        
     - name: Setup Python
       uses: actions/setup-python@v5
       with:
