--- a/.github/workflows/sync_cik_lookup_table.yaml
+++ b/.github/workflows/sync_cik_lookup_table.yaml
@@ -46,6 +46,35 @@ jobs:
       run: |
         python github_action_scripts/cik_lookup_table/sync_cik_lookup_table.py
 
+  update-ticker-summary-database:
+    needs: update-cik-lookup-database
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 1
+
+    - name: Setup Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.12'
+        cache: 'pip'
+
+    - name: Install dependencies (create virtualenv)
+      run: |
+        # Always create a fresh virtual environment on the runner. Caching
+        # an entire venv is brittle across runner images and Python patchlevels
+        # and can lead to missing executables (observed in CI). Instead rely
+        # on pip caching (setup-python 'cache: pip') and create the venv each run.
+        python -m venv .venv
+        # Use the venv's python to upgrade pip and install dependencies
+        . .venv/bin/activate
+        python -m pip install --upgrade pip
+        pip install --no-cache-dir -r requirements.txt
+        # Make the venv's bin directory available to all subsequent steps in this job
+        echo "$GITHUB_WORKSPACE/.venv/bin" >> $GITHUB_PATH
+
     - name: Synchronize ticker summary database with deterministic approach
       env:
         DATABASE_URL: ${{ secrets.DATABASE_URL }}
