--- a/.github/workflows/sync_cik_lookup_table.yaml
+++ b/.github/workflows/sync_cik_lookup_table.yaml
@@ -1,8 +1,8 @@
-name: Sync CIK Lookup Table
+name: Sync CIK Lookup and Ticker Summary Tables
 
 on:
   schedule:
-    - cron: '0 7 * * *'  # Runs every day at 7:00 AM UTC
+    - cron: '0 8 * * *'  # Runs every day at 7:00 AM UTC
   workflow_dispatch:  # Enable manual trigger
 
 jobs:
