--- a/.github/workflows/sync_database_tables.yaml
+++ b/.github/workflows/sync_database_tables.yaml
@@ -6,9 +6,9 @@ on:
   workflow_dispatch:  # Enable manual trigger
     inputs:
       run_all:
-        description: 'ALL (default).'
+        description: 'ALL (default)'
         required: false
-        default: true
+        default: false
         type: boolean
       run_cik:
         description: 'CIK_LOOKUP'
@@ -113,7 +113,12 @@ jobs:
 
   update-ticker-summary-database:
     needs: [validate-inputs, update-cik-lookup-database]
-    if: github.event_name == 'schedule' || (github.event_name == 'workflow_dispatch' && (github.event.inputs.run_all == true || github.event.inputs.run_summary == true))
+    if: |
+      always() && 
+      !cancelled() && 
+      (needs.update-cik-lookup-database.result == 'success' || needs.update-cik-lookup-database.result == 'skipped') && 
+      (github.event_name == 'schedule' || 
+       (github.event_name == 'workflow_dispatch' && (github.event.inputs.run_all == 'true' || github.event.inputs.run_summary == 'true')))
     runs-on: ubuntu-latest
     environment: "GitHub Actions Secrets"
 
@@ -171,7 +176,12 @@ jobs:
 
   update-ticker-directory-database:
     needs: [validate-inputs, update-ticker-summary-database]
-    if: github.event_name == 'schedule' || (github.event_name == 'workflow_dispatch' && (github.event.inputs.run_all == true || github.event.inputs.run_directory == true))
+    if: |
+      always() && 
+      !cancelled() && 
+      (needs.update-ticker-summary-database.result == 'success' || needs.update-ticker-summary-database.result == 'skipped') && 
+      (github.event_name == 'schedule' || 
+       (github.event_name == 'workflow_dispatch' && (github.event.inputs.run_all == 'true' || github.event.inputs.run_directory == 'true')))
     runs-on: ubuntu-latest
     environment: "GitHub Actions Secrets"
 
@@ -229,7 +239,12 @@ jobs:
 
   update-ticker-overview-database:
     needs: [validate-inputs, update-ticker-summary-database]
-    if: github.event_name == 'schedule' || (github.event_name == 'workflow_dispatch' && (github.event.inputs.run_all == true || github.event.inputs.run_overview == true))
+    if: |
+      always() && 
+      !cancelled() && 
+      (needs.update-ticker-summary-database.result == 'success' || needs.update-ticker-summary-database.result == 'skipped') && 
+      (github.event_name == 'schedule' || 
+       (github.event_name == 'workflow_dispatch' && (github.event.inputs.run_all == 'true' || github.event.inputs.run_overview == 'true')))
     runs-on: ubuntu-latest
     environment: "GitHub Actions Secrets"
 
